...
private struct LogoView: View {
    var body: some View {
        Image("login_logo")
            .resizable()
            .padding()
            .aspectRatio(contentMode: .fit)
            .accessibilityIdentifier("loginLogoImage")
            .padding(.top, 50)
    }
}

private struct LoginTextFieldsView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
...
                .textInputAutocapitalization(.never)
                .autocapitalization(.none)
                .keyboardType(.emailAddress)
                .padding()
                .background(Color.gray.opacity(0.2))
                .cornerRadius(8)
                .accessibilityIdentifier("emailTextField")
            
            SecureField("Password", text: $viewModel.password)
                .padding()
                .background(Color.gray.opacity(0.2))
                .cornerRadius(8)
                .textContentType(.oneTimeCode)
                .accessibilityIdentifier("passwordSecureField")
        }
    }
}

private struct ResetPasswordButtonView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
...
                    await viewModel.resetPassword(email: viewModel.email)
                    try await Task.sleep(for: .seconds(0.5))
                    viewModel.isPresenting = false
                }
            }
        }
        .accessibilityIdentifier("resetPasswordButton")
        .padding(.vertical, 10)
    }
}

private struct MessagesView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
    
    var body: some View {
        // error message
        if let errorMessage = viewModel.errorMessage {
            Text(errorMessage)
                .foregroundColor(.red)
                .accessibilityIdentifier("errorMessageLabelLogin")
        }
        
        if let resendMessage = viewModel.resendEmail {
            Text(resendMessage)
                .accessibilityIdentifier("resendEmailLabel")
        }
    }
}

private struct LoginButtonsView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
...
                    .padding()
                    .frame(maxWidth: .infinity)
                    .background(AppColors.mainColor)
                    .cornerRadius(30)
            }
            .disabled(viewModel.isLoading)
            .accessibilityIdentifier("loginButton")
            
            
            HStack {
                Rectangle()
                    .frame(height: 1)
                    .foregroundColor(.gray)
...
                        }
                        Text("Sign in with Google")
                            .foregroundStyle(.black)
                    }
                    .padding(.vertical, 5)
                }
                .accessibilityIdentifier("googleSignInButton")
            }
            Spacer()
        }
    }
}

...
                    viewModel.errorMessage = nil
                    viewModel.email = ""
                    viewModel.password = ""
                    navigationPath.append(NavigationDestination.SignupView(viewModel))
                }
            }
            .accessibilityIdentifier("moveToSignUpButton")
        }
        .padding(.top, 15)
    }
}

