...
private struct SignupTitleView: View {
    var body: some View {
        Text("Signup")
            .font(.system(size: 32).bold())
            .padding()
            .fontWeight(.semibold)
            .accessibilityIdentifier("signupTitle")
    }
}

private struct SignupDataFieldsView: View {
    @ObservedObject var viewModel: AuthenticationViewModel
    
...
