...
                        onBack()
                    }) {
                        Image(systemName: "chevron.backward")
                            .font(.title2)
                            .foregroundStyle(.gray)
                    }
                    .accessibilityIdentifier("backButtonTop")
                    
                    TextField("Search City", text: $viewModel.searchText)
                        .font(.title2)
                        .textInputAutocapitalization(.words)
                        .focused($textfieldOpen)
                        .padding()
                        .accessibilityIdentifier("searchedCityTextField")
                }
                .padding()
            }
            .padding(EdgeInsets(top: 10, leading: 10, bottom: 0, trailing: 10))
            
            
...
